<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/primaryGroup"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_drawer_play"
            android:title="@string/play"
            android:icon="@drawable/ic_controller"/>

        <item
            android:id="@+id/nav_drawer_save"
            android:title="@string/save"
            android:icon="@drawable/ic_floppy_grey" />

        <item
            android:id="@+id/nav_drawer_boards"
            android:title="@string/leaderboards"
            android:icon="@drawable/ic_trophy"/>

        <item
            android:id="@+id/nav_drawer_past_spots"
            android:title="@string/embers"
            android:icon="@drawable/ic_globe"/>

    </group>

    <group
        android:id="@+id/last"
        android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_drawer_profile"
            android:checked="false"
            android:title="@string/profile"
            android:icon="@drawable/ic_stash" />

        <item
            android:id="@+id/nav_drawer_logout"
            android:checked="false"
            android:title="@string/action_logout"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>