<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/fab_margin"
    tools:context="com.androidtitan.spotscore.main.settings.ui.ProfileFragment">

    <TextView
        android:id="@+id/profileTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/edit_profile"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileCircleImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/profileTitleTextView"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:src="@drawable/im_profile_placeholder"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>
    
    <TextView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_below="@+id/profileTitleTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@android:color/white"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileCircleImageView"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:paddingBottom="@dimen/fab_margin">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTextInputLayout"
        android:padding="@dimen/fab_margin">

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameTextInputLayout"
        android:padding="@dimen/fab_margin">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/locationTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextInputLayout"
        android:padding="@dimen/fab_margin">

        <EditText
            android:id="@+id/locationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/changePasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/change_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:id="@+id/saveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/save"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</RelativeLayout>


