<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/drawer_imageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_hamburger" />

                <ImageView
                    android:id="@+id/map_imageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_map" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/play_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/im_landing_chicago" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/play_imageView"
                    android:layout_alignParentEnd="true"
                    android:padding="16dp"
                    android:text="@string/play"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/landing_title_text" />

                <ImageView
                    android:id="@+id/leaderboard_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/play_imageView"
                    android:scaleType="fitXY"
                    android:src="@drawable/im_landing_london" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/leaderboard_imageView"
                    android:layout_alignParentEnd="true"
                    android:padding="16dp"
                    android:text="@string/leaderboards"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/landing_title_text" />

                <ImageView
                    android:id="@+id/saved_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/leaderboard_imageView"
                    android:scaleType="fitXY"
                    android:src="@drawable/im_landing_chicago" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/saved_imageView"
                    android:layout_alignParentEnd="true"
                    android:padding="16dp"
                    android:text="@string/saved"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/landing_title_text" />

                <ImageView
                    android:id="@+id/past_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/saved_imageView"
                    android:scaleType="fitXY"
                    android:src="@drawable/im_landing_texas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/past_imageView"
                    android:layout_alignParentEnd="true"
                    android:padding="16dp"
                    android:text="@string/past_spots"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/landing_title_text" />

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </FrameLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/activity_drawer_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/nav_drawer_menu"
        app:headerLayout="@layout/nav_drawer_header" />

</android.support.v4.widget.DrawerLayout>